--- a/app/src/main/res/layout/activity_my_recycler.xml
+++ b/app/src/main/res/layout/activity_my_recycler.xml
@@ -29,6 +29,16 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinnerCategory"
             android:layout_alignParentRight="true"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/buttonN"
+            android:layout_alignBottom="@+id/btn1"
+            android:layout_toRightOf="@+id/btn1"
+            android:layout_toEndOf="@+id/btn1" />
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
