--- a/app/src/main/res/layout/activity_my_recycler2.xml
+++ b/app/src/main/res/layout/activity_my_recycler2.xml
@@ -10,4 +10,9 @@
         android:scrollbars="vertical"
         />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2" />
+
 </LinearLayout>
