--- a/app/src/main/res/layout/item_tablet.xml
+++ b/app/src/main/res/layout/item_tablet.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_margin="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical|center_horizontal"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        card_view:cardCornerRadius="4dp">
+
+        <!--card_view:cardElevation="4dp"-->
+        <!--card_view:cardUseCompatPadding="true"-->
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:gravity="center">
 
             <ImageView
             android:layout_width="30dp"
@@ -20,42 +26,42 @@
             android:id="@+id/itemImage"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
-        </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearTop"
-            android:gravity="center_horizontal"
-            >
-            <TextView
-                android:gravity="center"
-                android:textStyle="bold"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="title"
-                android:padding="3dp"
-                android:id="@+id/itemTitle"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="$ 0.00"
-            android:padding="3dp"
-            android:id="@+id/itemPrice"
-            android:layout_below="@+id/linearTop"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+                android:layout_height="wrap_content">
 
-</LinearLayout>
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearTop"
+                    android:gravity="center_horizontal"
+                    >
+                    <TextView
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="title"
+                        android:padding="3dp"
+                        android:id="@+id/itemTitle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true" />
+                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="$ 0.00"
+                    android:padding="3dp"
+                    android:id="@+id/itemPrice"
+                    android:layout_below="@+id/linearTop"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
+        </LinearLayout>
+
+</android.support.v7.widget.CardView>
 
 
