--- a/app/src/main/res/menu/grability_menu.xml
+++ b/app/src/main/res/menu/grability_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/all_aplication">
+    <item
+        android:title="@string/all_aplication"
+        android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha">
     </item>
 
 
