--- a/app/src/main/res/layout/content_main_navigation_tablet.xml
+++ b/app/src/main/res/layout/content_main_navigation_tablet.xml
@@ -23,22 +23,38 @@
         android:gravity="clip_vertical"
         android:layout_marginBottom="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Columnas:"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/labelSeek" />
+            android:gravity="center_vertical">
 
-        <SeekBar
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
-            android:max="4"
-            android:layout_marginRight="16dp"
-            android:layout_toRightOf="@+id/labelSeek"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:text="Columnas:"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/labelSeek" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/txtColumn"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
+
+            <SeekBar
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/seekBar"
+                android:max="2"
+                android:progress="1"
+                android:layout_marginRight="16dp"
+                android:layout_toRightOf="@+id/labelSeek"
+                />
+        </LinearLayout>
 
     </RelativeLayout>
 
