--- a/app/src/main/res/layout/content_main_navigation.xml
+++ b/app/src/main/res/layout/content_main_navigation.xml
@@ -11,24 +11,6 @@
     tools:showIn="@layout/app_bar_main_navigation"
     android:background="#f6e7da">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/layoutTop"
-        android:gravity="clip_vertical"
-        android:layout_marginBottom="16dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MODO TABLETA"
-            android:id="@+id/btn1"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-    </RelativeLayout>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:paddingLeft="@dimen/activity_vertical_margin"
@@ -36,6 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_below="@+id/layoutTop" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
