--- a/app/src/main/res/layout/content_splash.xml
+++ b/app/src/main/res/layout/content_splash.xml
@@ -29,6 +29,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/abc_action_bar_navigation_padding_start_material"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/SplashTitle"
+            android:id="@+id/textView3" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/abc_action_bar_navigation_padding_start_material"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/SplashText"
             android:id="@+id/textView2" />
