--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/itemImage"
-            android:layout_margin="16dp"/>
+            />
+        <!--android:layout_margin="16dp"-->
 
         <LinearLayout
             android:orientation="vertical"
